# cmakeTest

t1/: CMakeLists.txt  main.c
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt
t3/lib/: CMakeLists.txt
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt
