cmake_minimum_required(VERSION 3.5)
PROJECT(HELLO)
ADD_SUBDIRECTORY(src;bin)
#message(STATUS "this is binary dir" ${PROJECT_BINARY_DIR})
#message(STATUS "this is SOURCE dir" ${PROJECT_SOURCE_DIR})
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)
INSTALL(PROGRAMS;runhello.sh;DESTINATION;bin)
install(PROGRAMS;build/bin/hello;DESTINATION;bin)
INSTALL(DIRECTORY;doc/;DESTINATION;share/doc/cmake/t2)
