cmake_minimum_required(VERSION 3.5)
ADD_EXECUTABLE(main main.c)
INCLUDE_DIRECTORIES(/usr/include/hello)
#FIND_PATH(myHeader NAMES hello.h PATHS /usr/include/usr/include/hello)
TARGET_LINK_LIBRARIES(main libhello.a)
message(STATUS "this is ${CMAKE_MODULE_PATH}")
#FIND_PATH(myHeader hello.h)
#IF(myHeader)
#INCLUDE_DIRECTORIES(${myHeader})
#ENDIF(myHeader)
